--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
