--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "draft-js": "^0.11.7",
+    "dotenv": "^16.1.4",
     "echarts-for-react": "^3.0.2",
     "formik": "^2.4.0",
     "jodit": "^4.0.0-beta.50",
     "jodit-react": "^1.3.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
