--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3-fetch": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "dotenv": "^16.1.4",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-simple-maps": "^3.0.0",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
