--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "formik": "^2.4.0",
     "jodit": "^4.0.0-beta.50",
     "jodit-react": "^1.3.39",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
