--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_BASE_URL = http://api.sabkimandi.com:3001
+REACT_APP_BASE_URL = http://admin.mazlis.com:5001
+
+REACT_APP_SITE_NAME = Mazlis
