--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-REACT_APP_BASE_URL = http://admin.mazlis.com:5001
+REACT_APP_API_URL_PROD = https://mazlis.com
+REACT_APP_API_URL_DEV = http://localhost:5000
+NODE_ENV="development"
 
 REACT_APP_SITE_NAME = Mazlis
